app/styles/style.scss
/* ... */
.patient-list .highlighted {
    background: rgb(242, 242, 244);
}
.patient-list tr:hover {
    cursor: pointer;
    background-color: rgb(242, 242, 244);
}
.icon-success {
    color: rgb(44, 160, 44);
}
.icon-info {
    color: rgb(31, 119, 180);
}
.icon-warning {
    color: rgb(255, 127, 14);
}
.icon-danger {
    color: rgb(214, 39, 40);
}
.shorty {
    margin-left: 75px;
}
.navbar-nav > li > .btn-group {
    padding: 8px 15px;
}
.navbar-toggle {
    display: block;
}
.navbar .collapsed {
    display: none;
}
.navbar .container {
    width: auto;
    background-color: rgb(242, 242, 244);
}
.pagetitle-small {
    color: #70ba63;
    background-color: #70ba63;
}
.starter-template {
    //padding: 112px 15px 0;
    padding: 116px 15px 0;
}
.starter-template-high {
    padding: 15px 15px 0;
}
.table > tbody > tr.suggestion.danger td span {
    text-decoration: line-through;
}
.table > tbody > tr.suggestion.active > td {
    background-color: rgb(223, 240, 216);
    color: #222;
}
.table > tbody > tr.suggestion.success td span {
    text-decoration: line-through;
    color: #85868d;
}
.table > tbody > tr.show-more-row.danger td span {
    text-decoration: line-through;
}
.table > tbody > tr.show-more-row.active > td {
    background-color: rgb(223, 240, 216);
    color: #222;
}
.table > tbody > tr.show-more-row.success td span {
    text-decoration: line-through;
    color: #85868d;
}
.table > tbody > tr.suggestion.success td label.btn-toggle span {
    color: #fff;
}
tr.suggestion.success label.btn-toggle.btn-success.active {
    opacity: 0.5;
}
.thumb-up {
    color: rgb(68, 157, 68);
}
.thumb-down {
    color: rgb(201, 48, 44);
}
.navbar-nav {
    /*width: 100%;*/
}
.btn-padding {
    position: relative;
    overflow: hidden;
    margin: 8px 0;
}
/*
 * Better file loading buttons#
 *  courtesy of Cory LaViska http://www.abeautifulsite.net/whipping-file-inputs-into-shape-with-bootstrap-3/
 */
.btn-file {
    position: relative;
    overflow: hidden;
    margin: 6px;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}
.table-no-margin {
    margin-bottom: 0;
}
.table-small-margin {
    margin-bottom: 10px;
}
/*
.form-horizontal .control-label {
  padding-top: 4px;
}
.input-group-addon {
  padding: 0px 6px;
}
.form-group .form-control, .form-group .input-group {
  margin-bottom: 5px;
}
.input-group .form-control {
  margin:0;
}*/
/* ------------------ Login page --------------------*/
.login-page > .login-container {
    width: 360px;
    margin-top: -80px;
    padding-top: 50px;
}
/*
.narrow-container{
  width: 360px;
}*/
.login-page .login-panel {
    margin-top: 40px;
}
.c3-chart-arc path._unselected_ {
    opacity: 0.3 !important;
}
.c3-chart-arc path._selected_ {
    opacity: 1 !important;
}
.c3-chart-bar path._unselected_ {
    opacity: 0.3 !important;
}
.c3-chart-bar path._selected_ {
    opacity: 1 !important;
}
.c3-chart-arc text {
    fill: #000;
}
/*
.dashboard-stats .view-style {
	opacity: 1;
	font-style: italic;
	font-size: 20px;
	padding: 7px 0px 15px 0px;
	color: rgb(95, 175,245);
}*/
/*
.fa-check-circle:before {
  content: "\f058";
}*/
table,
td,
th {
    border-collapse: collapse;
}
td,
th {
    padding: 30px;
}
.top-tab-pane {}
.top-tab-pane > .panel {
    border-top-width: 0;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    /*height: 750px;*/
}
.top-tab-pane .sub-tabs {
    margin-left: 10px;
    margin-right: 10px;
    padding-top: 10px;
}
.top-tab-pane .sub-tab-pane {
    padding: 0 10px;
}
.sub-tab-pane > .panel {
    border-top-width: 0;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    height: 680px;
    margin-bottom: 10px;
}
.sub-tab-pane > .panel > .panel-body {
    padding: 5px;
}
.sub-tab-pane > .panel .panel {
    padding-bottom: 0;
    margin: 0 0 5px;
}
.table-scroll {
    max-height: 170px;
}
.table-scroll .table {
    margin-bottom: 0;
}
.top-tab-pane > .panel > .panel-body > div > .table-scroll {
    max-height: 500px;
}
.all-patients > .table-scroll {
    max-height: 700px;
}
.overview-table > .table-scroll {
  max-height: 400px;
}
/*.soon {
	font-size: 64px;
	text-align: center;
}*/
/*************************************
*	Pathway code
**************************************/
.cd-container {
    /* this class is used to give a max-width to the element it is applied to, and center it horizontally when it reaches that max-width */
    width: 90%;
    max-width: 1170px;
    margin: 0 auto;
}
.cd-container::after {
    /* clearfix */
    content: '';
    display: table;
    clear: both;
}
#cd-timeline {
    position: relative;
    padding: 2em 0;
    margin-top: 3em;
    margin-bottom: 3em;
}
#cd-timeline::before {
    /* this is the vertical line */
    content: '';
    position: absolute;
    top: 40px;
    left: 50%;
    height: 70%;
    margin-left: -2px;
    width: 4px;
    background: #85868d;
}
.cd-timeline-block {
    position: relative;
    margin: 1.5em 0;
    min-height: 90px;
}
.cd-timeline-block:after {
    content: "";
    display: table;
    clear: both;
}
.cd-timeline-block:first-child {
    margin-top: 0;
}
.cd-timeline-block:last-child {
    margin-bottom: 0;
}
/**********************************/
/* Typeahead for patient searching
************************************/
.gist,
.tt-dropdown-menu {
    text-align: left;
}
.tt-hint,
.tt-query,
.typeahead {
    width: 396px;
    height: 30px;
    padding: 0 12px;
    font-size: 13px;
    line-height: 30px;
    border: 2px solid #ccc;
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    border-radius: 8px;
    outline: none;
}
.typeahead {
    background-color: #fff;
}
.typeahead:focus {
    border: 2px solid #0097cf;
}
/* ... */

